terraform/security.tf
resource "aws_security_group" "allow_web" {
  name        = "allow_web"
  vpc_id      = aws_vpc.main.id

  ingress {     
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
 }
  ingress {     
                from_port = 22
                to_port = 22
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
 }
  egress {      
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
 }
}

resource "aws_security_group" "allow_internal" {
  name        = "allow_internal"
  vpc_id      = aws_vpc.main.id

  # Permite todo el tráfico que venga desde el grupo de seguridad público
  ingress {     
                from_port = 0
                to_port = 0
                protocol = "-1"
                security_groups = [aws_security_group.allow_web.id]
 }
  egress {      
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
 }
}
