terraform/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "igw" { vpc_id = aws_vpc.main.id }

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
}

# NAT Gateway para que la privada tenga internet
resource "aws_eip" "nat" { domain = "vpc" }
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {       
                cidr_block = "0.0.0.0/0"
                gateway_id = aws_internet_gateway.igw.id
 }
}

resource "aws_route_table_association" "pub" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {       
                cidr_block = "0.0.0.0/0"
                nat_gateway_id = aws_nat_gateway.nat.id
 }
}

resource "aws_route_table_association" "priv" {
  subnet_id = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
